--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ RUNPOD_API_KEY=
 
 # Optional: CORS origin for the frontend (default http://localhost:5173)
 # CORS_ORIGIN=http://localhost:5173
+
+# For Vercel: SSH private key content (needed for gateway start/restart/logs and pod exec).
+# Paste the full key including -----BEGIN ... ----- and -----END ... -----. Use \n for newlines if needed.
+# SSH_PRIVATE_KEY=
+
+# Optional: Gateway pod ID (default used if not set). Only needed if your gateway runs on a different pod.
+# GATEWAY_POD_ID=
